fixed header responsive on iphone4 5 6 ipad

--- a/src/css/components/basket.scss
+++ b/src/css/components/basket.scss
@@ -31,3 +31,9 @@
   margin-top: .4em;
   margin-bottom: .4em;
 }
+
+@media screen and (max-width: 480px) {
+  .basket {
+    font-size: .7em;
+  }
+}
