--- a/src/css/components/menu.scss
+++ b/src/css/components/menu.scss
@@ -57,7 +57,3 @@
     display: none;
   }
 }
-
-@media screen and (max-width: 768px) {
-
-}
