--- a/src/css/components/services.scss
+++ b/src/css/components/services.scss
@@ -35,3 +35,9 @@
   background-position: center;
   background-size: auto;
 }
+
+@media screen and (max-width: 480px) {
+  .services-menu {
+    font-size: .7em;
+  }
+}
