--- a/src/css/layout/header.scss
+++ b/src/css/layout/header.scss
@@ -18,3 +18,9 @@
     display: none;
   }
 }
+
+@media screen and (max-width: 480px) {
+  .header__logo {
+    width: calc(40%);
+  }
+}
