--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,6 +53,10 @@ button {
   margin-top: .4em;
   margin-bottom: .4em; }
 
+@media screen and (max-width: 480px) {
+  .basket {
+    font-size: .7em; } }
+
 .contacts {
   text-align: center;
   font-size: 1.6em;
@@ -336,6 +340,15 @@ button {
   background-position: center;
   background-size: auto; }
 
+@media screen and (max-width: 480px) {
+  .services-menu {
+    font-size: .7em; } }
+
+@media screen and (max-width: 480px) {
+  .logo__img {
+    width: -webkit-calc(100%);
+    width: calc(100%); } }
+
 .page {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -372,6 +385,11 @@ button {
 @media screen and (max-width: 768px) {
   .header__contacts {
     display: none; } }
+
+@media screen and (max-width: 480px) {
+  .header__logo {
+    width: -webkit-calc(40%);
+    width: calc(40%); } }
 
 .sidebar {
   float: left;
